# qgismapper

./: GatherPlugin.md  GatherPluginDev.md  InstallationGuide.md  PlayerPlugin.md  PlayerPluginDev.md  ProjectHome.md  SupportedHardware.md
doc/gatherplugin/: gather_audio_workflow.dia  gather_video_dia1.dia
doc/playerplugin/: player_dev_photo1.dia  player_dev_video1.dia
mapper/: CMakeLists.txt
mapper/audio-capture/: CMakeLists.txt  PluginAudioWorker.cpp  PluginAudioWorker.h  PluginAudioWorker_SamplesBuffer.c
mapper/audio-capture/sip/: PluginAudioWorker.sip
mapper/audio-replay/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  test.py
mapper/cmake/: FindDc1394.cmake  FindFFmpeg.cmake
mapper/ladybug/: ladybug.cpp  ladybug.h  ladybug_pgr.h  ladybugimage.cpp  ladybugplayerthread.cpp  ladybugstream.cpp  ladybugstream.h  ladybugthread.cpp  ladybugwidget.cpp
mapper/ladybug/python/: ladybug.sip
mapper/ladybug/test/: CMakeLists.txt  ladywidget.h  main.cpp
mapper/python/: CMakeLists.txt  NMEA.py
mapper/video-capture/: CompressThread.cpp  CompressThread.h  GatherThread.cpp  PluginVideoWorker.cpp  ProcessThread.cpp  VideoPreviewWidget.cpp  VideoPreviewWidget.h  test.py
mapper/video-capture/sip/: PluginVideoWorker.sip
plugins/gatherplugin/: CanvasMarkers.py  DlgSettings.py  DockWidget.py  DockWidget.ui  DockWidget_simple.py  DockWidget_simple.ui  GatherPlugin.py  GpsDaemon.py  GpsStatusWidget.py  GpxFile.py  Makefile  __init__.py  gatherplugin.e4p  resources.py
plugins/gatherplugin/SourcePlugins/: AudioStatusWidget.py  GpsInfoWidget.py  PluginAudio.py  PluginDummy.py  PluginGps.py  PluginGps.ui  PluginLadybug.py  PluginLadybug.ui  PluginNotes.py  PluginPhoto.py  PluginPhoto.ui  PluginVideo.py  PluginVideo_V4l.ui  __init__.py
plugins/playerplugin/: CanvasMarkers.py  DockWidget.py  DockWidget.ui  Enumerate.py  NMEA.py  PlayerPlugin.py  ReplayMapTool.py  __init__.py  playerplugin.e4p  ui_mapTool.xpm
plugins/playerplugin/SourcePlugins/: PluginAudio.py  PluginDummy.py  PluginDummy.ui  PluginGps.py  PluginGps.ui  PluginLadybug.py  PluginNotes.py  PluginVideo.py  PluginVideo.ui  PluginVideo_playerWindow.ui  __init__.py
plugins/playerplugin/SourcePlugins/VideoPlayerWidget_mplayer/: __init__.py
trunk/doc/gatherplugin/: gather_gatherer.dia  gather_overview.dia  gather_video_dia2.dia
trunk/doc/playerplugin/: player_dev_audio1.dia  player_overview.dia
trunk/mapper/: CMakeLists.txt
trunk/mapper/audio-capture/: CMakeLists.txt  PluginAudioWorker.cpp
trunk/mapper/audio-replay/: AudioPlayer.cpp  CMakeLists.txt
trunk/mapper/audio-replay/sip/: AudioPlayer.sip
trunk/mapper/cmake/: FindPthread.cmake  FindVorbis.cmake
trunk/mapper/ladybug/: CMakeLists.txt  ladybug.cpp  ladybug.h  ladybugimage.cpp  ladybugimage.h  ladybugplayerthread.h  ladybugstream.cpp  ladybugstream.h  ladybugthread.cpp  ladybugthread.h  ladybugwidget.cpp  ladybugwidget.h
trunk/mapper/ladybug/python/: ladybug.sip
trunk/mapper/ladybug/test/: ladywidget.cpp  main.cpp
trunk/mapper/video-capture/: CMakeLists.txt  CompressThread.cpp  GatherThread.cpp  GatherThread.h  PluginInternals.h  PluginVideoWorker.h  PreviewThread.cpp  PreviewThread.h  ProcessThread.h
trunk/plugins/: deploy_plugins.py  plugins.xml
trunk/plugins/gatherplugin/: DlgSettings.py  DlgSettings.ui  DockWidget.py  GatherPlugin.py  Gatherer.py  GpsDaemon.py  Makefile  __init__.py  resources.py  resources.qrc
trunk/plugins/gatherplugin/SourcePlugins/: LadybugPreview.py  PluginAudio.py  PluginAudio.ui  PluginDummy.py  PluginGps.py  PluginLadybug.py  PluginLadybug.ui  PluginNotes.py  PluginNotes.ui  PluginVideo.py  PluginVideo.ui
trunk/plugins/playerplugin/: DockWidget.py  GpxFile.py  Makefile  PlayerPlugin.py  playerplugin.e4q  playerplugin.e4t  resources.qrc
trunk/plugins/playerplugin/SourcePlugins/: PluginAudio.py  PluginAudio.ui  PluginGps.py  PluginGps.ui  PluginLadybug.py  PluginLadybug.ui  PluginNotes.py  PluginNotes.ui  PluginPhoto.py  PluginPhoto.ui  PluginVideo.py
trunk/plugins/playerplugin/SourcePlugins/VideoPlayerWidget_mplayer/: VideoPlayerWidget.py  pymplayer.py
wiki/: GatherPlugin.wiki  GatherPluginDev.wiki  InstallationGuide.wiki  PlayerPlugin.wiki  PlayerPluginDev.wiki  SupportedHardware.wiki
