
SET (TEST_SRCS main.cpp ladywidget.cpp)

SET (TEST_MOC_HDRS ladywidget.h)

QT4_WRAP_CPP(TEST_MOC_SRCS ${TEST_MOC_HDRS})


INCLUDE_DIRECTORIES(${DC1394_INCLUDE_DIR} .. )

ADD_EXECUTABLE(ladybug-test ${TEST_SRCS} ${TEST_MOC_SRCS})

TARGET_LINK_LIBRARIES(ladybug-test ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${DC1394_LIBRARY} ladybug)
